--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="js/script.js" defer></script>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/reset.css">
+    <script type="text/javascript" src="/js/script.js" defer></script>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/reset.css">
     
     <title>Credit Card</title>
 </head>
@@ -21,17 +21,17 @@
         <div class="content">
             <div class="header">
                 <div class="boximg">
-                    <img class="chip" src="../CreditCard/images/chip.png" alt="chip">
+                    <img class="chip" src="/images/chip.png" alt="chip">
                 </div>
 
-                <img class="deathStar" src="../CreditCard/images/deathStar.png" alt="DeathStar">
+                <img class="deathStar" src="/images/deathStar.png" alt="DeathStar">
 
 
             </div>
 
             <div class="footer">
                 <p><a class="linkedinSite" href="https://www.linkedin.com/in/thmacena/">Tiago Henrique</a></p>
-                <img class="empire_img" src="../CreditCard/images/logoSW.png" alt="Empire">
+                <img class="empire_img" src="/images/logoSW.png" alt="Empire">
             </div>
         </div>
 </div>
