fifith commit with some changes on the index html

--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
         <div class="content">
             <div class="header">
                 <div class="boximg">
-                    <img class="chip" src="/images/chip.png" alt="chip">
+                    <img class="chip" src="./images/chip.png" alt="chip">
                 </div>
 
-                <img class="deathStar" src="/images/deathStar.png" alt="DeathStar">
+                <img class="deathStar" src="./images/deathStar.png" alt="DeathStar">
 
 
             </div>
 
             <div class="footer">
                 <p><a class="linkedinSite" href="https://www.linkedin.com/in/thmacena/">Tiago Henrique</a></p>
-                <img class="empire_img" src="/images/logoSW.png" alt="Empire">
+                <img class="empire_img" src="./images/logoSW.png" alt="Empire">
             </div>
         </div>
 </div>
