changes os html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p class="secondText">Inspired by</p>
     <p class="thirdText">Star Wars</p>
 
-    <div class="container">
+    <div class="container" id="turn">
         <div class="content">
             <div class="header">
                 <div class="boximg">
@@ -30,7 +30,7 @@
             </div>
 
             <div class="footer">
-                <p><a class="linkedinSite" href="https://www.linkedin.com/in/thmacena/">Tiago Henrique</a></p>
+                <p><a class="linkedinSite" href="https://www.linkedin.com/in/thmacena/">Tiago Henrique Macena</a></p>
                 <img class="empire_img" src="./images/logoSW.png" alt="Empire">
             </div>
         </div>
